# ndk-png

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wind/ndk/png/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  PngPreviewController.cpp  com_phuket_tour_opengl_renderer_PngPreviewController.h  com_wind_ndk_png_PngPlayer.cpp  com_wind_ndk_png_PngPlayer.h  log.h
app/src/main/cpp/eglcore/: egl_core.cpp  egl_core.h
app/src/main/cpp/libcommon/: CommonTools.h  runnable.h
app/src/main/cpp/libgles/: CMakeLists.txt
app/src/main/cpp/libgles/egl/: base_egl_surface.cpp  base_egl_surface.h  egl_core.cpp  gl_renderer.cpp  gl_renderer.h  gl_surface.cpp  gl_surface.h  offscreen_surface.cpp  offscreen_surface.h  window_surface.cpp  window_surface.h
app/src/main/cpp/libgles/gles/: base_filter.cpp  base_filter.h  gl_utils.cpp  texture.cpp  texture.h
app/src/main/cpp/libpng/: CMakeLists.txt
app/src/main/cpp/librenderer/: CMakeLists.txt  pic_preview_controller.cpp  pic_preview_controller.h  pic_preview_render.cpp  pic_preview_render.h  pic_preview_texture.cpp  png_filter.cpp  png_filter.h  png_player.cpp  png_player.h  png_renderer.cpp  png_renderer.h
app/src/main/cpp/pngdecoder/: CMakeLists.txt  asset_png_decoder.cpp  asset_png_decoder.h  file_png_decoder.cpp  file_png_decoder.h  png_decoder.cpp  png_decoder.h
app/src/main/cpp/pngdecoder/libpng/: CMakeLists.txt  png_pic_decoder.cpp  png_pic_decoder.h
app/src/main/cpp/pngdecoder/libpng/contrib/pngminus/: CMakeLists.txt
app/src/main/cpp/pngdecoder/libpng/contrib/visupng/: PngFile.c  VisualPng.c
app/src/main/java/com/phuket/tour/opengl/renderer/: MainActivity.java  PngActivity.java  PngPlayer.java  PngPreviewActivity.java  PngPreviewController.java
app/src/main/java/com/wind/ndk/png/: MainActivity.java  MainActivity.kt  PngActivity.java  PngPlayer.java  PngPlayer.kt
app/src/main/res/layout/: activity_main.xml  activity_png.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/wind/ndk/png/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
